# plate-simulation

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README-dev.rst  README.rst  meta.yaml  package.rst  py-3.10.conda-lock.yml  py-3.11.conda-lock.yml  pyproject.toml  recipe.yaml
.github/workflows/: issue_to_jira.yml  python_analysis.yml  python_deploy_dev.yml  python_deploy_prod.yml
docs/source/: conf.py  environment.yml  getting_started.rst  index.rst  usage.rst
environments/: py-3.10-linux-64-dev.conda.lock.yml  py-3.10-linux-64.conda.lock.yml  py-3.10-win-64-dev.conda.lock.yml  py-3.10-win-64.conda.lock.yml  py-3.11-linux-64-dev.conda.lock.yml  py-3.11-linux-64.conda.lock.yml  py-3.11-win-64-dev.conda.lock.yml  py-3.11-win-64.conda.lock.yml
plate_simulation/: __init__.py  driver.py  logger.py  params.py  utils.py
plate_simulation-assets/uijson/: plate_simulation.ui.json
plate_simulation/mesh/: __init__.py  params.py
plate_simulation/models/: __init__.py  events.py  params.py  plates.py  series.py
plate_simulation/quantities/: __init__.py  base.py
tests/: __init__.py  assets_path_test.py  version_test.py
tests/models/: __init__.py  events_test.py  params_test.py  plates_test.py  series_test.py
tests/quantities/: quantity_test.py
tests/runtest/: __init__.py  driver_test.py  gravity_test.py
tests/utils/: utils_test.py
